[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Антон Тюрин <AntonTyurin87@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}, { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
